Modidied pages Added

--- a/index.html
+++ b/index.html
@@ -19,10 +19,21 @@
             <h2>Our Thanks for Helping Us Change the World</h2>
             <p>If you sign up below, we extend our gratitude beforehand for taking the time to help us make a difference.
                 We appreciate those who help us SO MUCH that we will be letting you keep ALL items modeled and used to showcase our talents.
-                We will also send each accepted model/volunteer a free hair product, accessory, or merch every month.
+                We will also send each accepted model/volunteer a free hair product, accessory, or merch every month. If you are interested please sign up below.
+                <a href="./signUp.html">Sign Up at the Link Please</a>
             </p>
         </div>
 
-        
+        <h3>Example Video</h3>
+        <p>Please Take a Look Below to view tips and pointers to being the model/volunteer we are looking for. HAVE FUN!!</p>
+        <iframe src="https://www.youtube.com/watch?v=AuVX4WKiblQ" frameborder="0" width="400" height="300" allowfullscreen>
+        </iframe>
+        <p>If you are having trouble viewing the video, please click the link below.
+            <a href="https://www.youtube.com/watch?v=AuVX4WKiblQ">Tips for Models</a>
+        </p>
+        <p>Please understand that we are not necessarily looking for professionals. All experience levels are invited to sign up. We want this to be an
+            overall fun experience for each and every one of you so if you are selected PLEASE HAVE FUN with this experience. We
+            want you all to have fun helping others. Please Sign up if interested with the link. <a href="./signUp.html">Sign Up here</a>
+        </p>
     </body>
 </html>
